# CTE_Console

./: .gitignore  CMakeLists.txt  README.md
Misc/: test.xml
README/: README_zh-CN.md
src/Headers/: CTECon.h  Functions.h  common.h
src/Main/: CTECon.cpp  Functions.cpp  tinyxml2.cpp
